fix collapsed blocks in sensors tab

--- a/src/css/tabs/sensors.css
+++ b/src/css/tabs/sensors.css
@@ -178,4 +178,5 @@
 
 .tab-sensors .gui_box {
     flex-direction: row-reverse;
+    flex-wrap: wrap;
 }
